fix: hopefully fix discord ticker breaking ???